[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Bob Steers <steers.bob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.23.0"
paho-mqtt = "^1.5.0"
pyserial = "^3.4"
schedule = "^0.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
autopep8 = "*"
flake8-quotes = "*"
flake8-pyproject = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = ".venv"

[tool.autopep8]
max-line-length = 120
